@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-11T00:39:56Z",
+  "timestamp" : "2024-09-12T00:40:22Z",
   "count_outdated" : 1162,
   "uniques_outdated" : 691,
-  "count" : 1168,
-  "uniques" : 697,
+  "count" : 1169,
+  "uniques" : 698,
   "clones" : [
     {
       "timestamp": "2024-08-29T00:00:00Z",
@@ -40,6 +40,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-09-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
