@@ -1,5 +1,5 @@
 {
-  "count": 6,
+  "count": 7,
   "uniques": 5,
   "clones": [
     {
@@ -21,6 +21,11 @@
       "timestamp": "2024-09-06T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-09-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
