@@ -1,3 +1,12 @@
+2024-09-12T00:40:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10821959706 # 416
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-12
+* notice: last 14d: unq all: 5 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 691 1162 / 697 1168
+* notice: next accum: outdated-unq outdated-all / unq all: 691 1162 / 698 1169
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-11]
+
 2024-09-11T00:39:56Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10802853742 # 415
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-11
